--- a/index.html
+++ b/index.html
@@ -216,15 +216,19 @@
                         </div>
                     </section>
 
-                    <!--<section id="wip">
+                    <section id="wip">
                         <h2 class="text-2xl font-bold border-b-2 border-blue-500 pb-2 mb-6 text-gray-900 dark:text-white">Work in Progress</h2>
                         <div id="wip-list" class="space-y-6">
                             <article>
-                                <h3 class="text-xl font-semibold text-gray-900 dark:text-white">NEW PROJECT</h3>
-                                <p class="mt-1 text-gray-600 dark:text-gray-400">with <a href="https://coauthor.com/" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">co-author</a></p>
+                                <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Meritocracy and Misallocation: Evidence from the Brazilian Judiciary</h3>
+                                <!--<p class="mt-1 text-gray-600 dark:text-gray-400">with <a href="https://coauthor.com/" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">co-author</a></p>-->
+                            </article>
+                            <article>
+                                <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Paternalism vs. Pragmatism: Evidence from a Natural Experiment in Colonialism</h3>
+                                <!--<p class="mt-1 text-gray-600 dark:text-gray-400">with <a href="https://coauthor.com/" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">co-author</a></p>-->
                             </article>
                         </div>
-                    </section>-->
+                    </section>
 
                     <section id="teaching">
                         <div class="flex items-center">
@@ -299,6 +303,7 @@
     </script>
 </body>
 </html>
+
 
 
 
