--- a/index.html
+++ b/index.html
@@ -151,10 +151,7 @@
                         <div class="space-y-8">
                             <article id="RainySeasons">
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Shifting Seasons: Agricultural Adaptation and Resilience in Africa</h3>
-                                <p class="mt-1 italic font-bold">
-                                  <span class="text-gray-600 dark:text-gray-400">Conditionally accepted at the </span>
-                                  <span class="text-green-600 dark:text-green-400">Journal of the European Economic Association</span>
-                                </p>                                
+                                <p class="mt-1 text-gray-600 dark:text-gray-400 italic font-bold">Job Market Paper</p>                              
                                     <div class="mt-3 flex items-center gap-4">
                                     <a
                                       href="{{ '/docs/papers/ShiftingSeasons_KimTaveras.pdf' | relative_url }}?v={{ site.github.build_revision }}"
@@ -174,7 +171,10 @@
                             </article>
                             <article id="FSTS">
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">From Sea to Shore: The Impact of Ocean Acidification on Child Health</h3>
-                                <p class="mt-1 text-green-600 dark:text-green-400 italic font-bold">Conditionally accepted at the Journal of the European Economic Association</p>
+                                <p class="mt-1 italic font-bold">
+                                  <span class="text-gray-600 dark:text-gray-400">Conditionally accepted at the </span>
+                                  <span class="text-green-600 dark:text-green-400">Journal of the European Economic Association</span>
+                                </p>  
                                 <p class="mt-2 text-gray-700 dark:text-gray-300">
                                     with <a href="https://alexarmand.org" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Alex Armand</a>
                                 </p>
@@ -305,6 +305,7 @@
     </script>
 </body>
 </html>
+
 
 
 
