--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@
                                 <!--<p class="mt-1 text-gray-600 dark:text-gray-400">with <a href="https://coauthor.com/" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">co-author</a></p>-->
                             </article>
                             <article>
-                                <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Therapeutic Media: Self-Effects and Street Violence in Guatemala <span style="font-style: italic; font-weight: normal;">[Proposal Stage]</span></h3>
+                                <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Therapeutic Media: Self-Effects and Street Violence in Guatemala</h3>
+                                <p class="text-base text-gray-600 dark:text-gray-400" style="font-style: italic; font-weight: normal; margin-top: 0.25rem; margin-bottom: 0.25rem;">[Proposal Stage]</p>
                                 <p class="mt-1 text-gray-600 dark:text-gray-400">with <a href="https://alexarmand.org" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Alex Armand</a></p>
                             </article>
                         </div>
@@ -309,6 +310,7 @@
     </script>
 </body>
 </html>
+
 
 
 
