--- a/index.html
+++ b/index.html
@@ -145,6 +145,39 @@
                             </p>
                         </div>
                     </section>
+
+                    <section id="publications">
+                        <h2 class="text-2xl font-bold border-b-2 border-blue-500 pb-2 mb-6 text-gray-900 dark:text-white">Main Publications</h2>
+                        <div class="space-y-8">
+                            <article id="FSTS">
+                                <h3 class="text-xl font-semibold text-gray-900 dark:text-white">From Sea to Shore: The Impact of Ocean Acidification on Child Health</h3>
+                                <p class="mt-1 font-bold text-teal-600 dark:text-teal-400">
+                                    Journal of the European Economic Association (forthcoming)
+                                </p>  
+                                <p class="mt-1 text-gray-700 dark:text-gray-300">
+                                    with <a href="https://alexarmand.org" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Alex Armand</a>
+                                    <span class="mx-1 text-gray-400">|</span>
+                                    <a href="https://zenodo.org/records/17348360" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Data and Replication</a>
+                                </p>
+                                <div class="mt-3 flex items-center gap-4">
+                                    <a
+                                      href="{{ '/docs/papers/FSTS.pdf' | relative_url }}?v={{ site.github.build_revision }}"
+                                      target="_blank" rel="noopener noreferrer"
+                                      class="text-blue-600 dark:text-blue-400 hover:underline font-medium">
+                                      View Paper (PDF)
+                                    </a>
+                                    <button onclick="toggleVisibility('FSTS-abstract', this)" aria-expanded="false" class="text-blue-600 dark:text-blue-400 hover:underline flex items-center font-medium">
+                                        Abstract <svg class="h-4 w-4 ml-1 toggle-arrow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" /></svg>
+                                    </button>
+                                </div>
+                                <div id="FSTS-abstract" class="hidden mt-2">
+                                    <p class="text-gray-700 dark:text-gray-300 paper-abstract">
+                                        Since the Industrial Revolution, ocean water acidity has risen by 26% due to anthropogenic emissions—a process known as <span class="italic">ocean acidification</span>—posing a risk for marine life and the communities depending on it. This paper examines the consequences of ocean acidification for child health, using data from coastal regions in 36 low- and middle-income countries from 1972 to 2018, encompassing 41% of the world’s coastal population.  Leveraging short-term exogenous shifts in ocean acidity near human settlements for identification,  we find that prenatal exposure to higher water acidity significantly raises the risk of death in the first months of life and impacts early childhood development.  We show evidence consistent with these effects being associated with maternal malnutrition,  as increased acidity reduces catches for small-scale fisheries,  increasing seafood prices and reducing consumption of crucial nutrients.  Our findings indicate limited adaptation to these impacts. We estimate that, absent intervention, ocean acidification could contribute to as many as 77 million neonatal deaths in this region by 2100—a consequence that should not be ignored in the projected cost of climate change.                                   
+                                    </p>
+                                </div>
+                            </article>
+                        </div>
+                    </section>
                     
                     <section id="working-papers">
                         <h2 class="text-2xl font-bold border-b-2 border-blue-500 pb-2 mb-6 text-gray-900 dark:text-white">Working Papers</h2>
@@ -167,31 +200,6 @@
                                     <p class="text-gray-700 dark:text-gray-300 paper-abstract">
                                         Climate risk poses a threat to Sub-Saharan Africa's vulnerable rain-fed agriculture. Using micro-data from six countries, I show that a one-week delay in the onset of the rainy season reduces yields by 2% and consumption by 1%. These damages are borne disproportionately by the most vulnerable, particularly on plots managed by women, while education, wealth, and technology improve resilience. In response, farmers adapt along low-cost margins, but these adjustments are insufficient to prevent losses, in part because of informational frictions. <span class="italic">False onsets</span>—misleading early rains followed by a dry spell—trigger premature planting and increase damages. This informational challenge appears pervasive; the analysis shows that wealthier and more educated farmers achieve better outcomes primarily by buffering shocks, rather than by superior adaptation strategies. The negative impacts are concentrated in locations already experiencing long-run climatic shifts, indicating a persistent failure to adapt over time. These findings highlight the potential benefits of short-range forecasts that help farmers better execute their timing strategies.                                    
                                     </p>
-                                </div>
-                            </article>
-                            <article id="FSTS">
-                                <h3 class="text-xl font-semibold text-gray-900 dark:text-white">From Sea to Shore: The Impact of Ocean Acidification on Child Health</h3>
-                                <p class="mt-1 italic font-bold">
-                                  <span class="text-gray-600 dark:text-gray-400">Conditionally accepted at the </span>
-                                  <span class="text-teal-600 dark:text-teal-400">Journal of the European Economic Association</span>
-                                </p>  
-                                <p class="mt-2 text-gray-700 dark:text-gray-300">
-                                    with <a href="https://alexarmand.org" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Alex Armand</a>
-                                </p>
-                                <div class="mt-3 flex items-center gap-4">
-                                    <a
-                                      href="{{ '/docs/papers/FSTS.pdf' | relative_url }}?v={{ site.github.build_revision }}"
-                                      target="_blank" rel="noopener noreferrer"
-                                      class="text-blue-600 dark:text-blue-400 hover:underline font-medium">
-                                      View Paper (PDF)
-                                    </a>
-                                    <button onclick="toggleVisibility('FSTS-abstract', this)" aria-expanded="false" class="text-blue-600 dark:text-blue-400 hover:underline flex items-center font-medium">
-                                        Abstract <svg class="h-4 w-4 ml-1 toggle-arrow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" /></svg>
-                                    </button>
-                                </div>
-                                <div id="FSTS-abstract" class="hidden mt-2">
-                                    <p class="text-gray-700 dark:text-gray-300 paper-abstract">
-                                        Since the Industrial Revolution, ocean water acidity has risen by 26% due to anthropogenic emissions—a process known as <span class="italic">ocean acidification</span>—posing a risk for marine life and the communities depending on it. This paper examines the consequences of ocean acidification for child health, using data from coastal regions in 36 low- and middle-income countries from 1972 to 2018, encompassing 41% of the world’s coastal population.  Leveraging short-term exogenous shifts in ocean acidity near human settlements for identification,  we find that prenatal exposure to higher water acidity significantly raises the risk of death in the first months of life and impacts early childhood development.  We show evidence consistent with these effects being associated with maternal malnutrition,  as increased acidity reduces catches for small-scale fisheries,  increasing seafood prices and reducing consumption of crucial nutrients.  Our findings indicate limited adaptation to these impacts. We estimate that, absent intervention, ocean acidification could contribute to as many as 77 million neonatal deaths in this region by 2100—a consequence that should not be ignored in the projected cost of climate change.                                    </p>
                                 </div>
                             </article>
                             <article id="AKT">
@@ -314,6 +322,7 @@
     </script>
 </body>
 </html>
+
 
 
 
