--- a/index.html
+++ b/index.html
@@ -157,7 +157,9 @@
                                 <p class="mt-1 text-gray-700 dark:text-gray-300">
                                     with <a href="https://alexarmand.org" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Alex Armand</a>
                                     <span class="mx-1 text-gray-400">|</span>
-                                    <a href="https://zenodo.org/records/17348360" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Data and Replication</a>
+                                    <a href="https://zenodo.org/records/17348360" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Data and replication</a>
+                                    <span class="mx-1 text-gray-400">|</span>
+                                    <a href="https://eeassoc.org/node/28242" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Teaching materials</a>
                                 </p>
                                 <div class="mt-3 flex items-center gap-4">
                                     <a
@@ -324,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
