--- a/index.html
+++ b/index.html
@@ -151,9 +151,12 @@
                         <div class="space-y-8">
                             <article id="FSTS">
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">From Sea to Shore: The Impact of Ocean Acidification on Child Health</h3>
-                                <p class="mt-1 font-bold text-teal-600 dark:text-teal-400">
+                                <p class="mt-1">
+                                  <a href="https://doi.org/10.1093/jeea/jvaf054"
+                                     class="font-bold text-teal-600 dark:text-teal-400">
                                     Journal of the European Economic Association (forthcoming)
-                                </p>  
+                                  </a>
+                                </p>
                                 <p class="mt-1 text-gray-700 dark:text-gray-300">
                                     with <a href="https://alexarmand.org" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Alex Armand</a>
                                     <span class="mx-1 text-gray-400">|</span>
@@ -326,6 +329,7 @@
     </script>
 </body>
 </html>
+
 
 
 
